Resolved logo layout issue

--- a/styles/globals.less
+++ b/styles/globals.less
@@ -22,8 +22,14 @@
 				width: 120px;
 				height: 64px;
 
-				.logo {
-					margin-top: 7px;
+				a {
+					& > div {
+						overflow: visible !important;
+
+						.logo {
+							margin-top: 12px !important;
+						}
+					}
 				}
 			}
 
